--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   convex_bottom_bar: ^3.2.0
   http: ^1.1.0
   cached_network_image: ^3.2.3
+  video_player: ^2.7.1
 
 dev_dependencies:
   flutter_test:
